k8s/ingress.yml
## subdirectory
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-front-ingress
  namespace: statsatgouv
  labels:
    name: app-front-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" 
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: statatgouv-sig-client.seenovate.com 
    http:
      paths:
      - pathType: Prefix
        path: /front(/|$)(.*)
        backend:
          service: 
            name: app-front-service
            port: 
              number: 9080
  tls:
  - hosts:    
    - statatgouv-sig-client.seenovate.com
    secretName: statatgouv-sig-client.seenovate.com-cert
